--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
+    "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.8.16",
     "qrcode": "^1.5.4",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
@@ -54,6 +56,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tanstack/eslint-plugin-query": "^5.66.1",
+    "@types/html-to-text": "^9.0.4",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
