--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-intl": "^4.0.2",
